# anlp-fall2025-hw1

./: README.md  cfimdb-dev-finetuning-output.txt  cfimdb-dev-lora-output.txt  cfimdb-dev-prompting-output.txt  cfimdb-test-finetuning-output.txt  cfimdb-test-lora-output.txt  cfimdb-test-prompting-output.txt  checklist.md  classifier.py  config.py  dolly_dataset.py  generated-sentence-temp-0.txt  generated-sentence-temp-1.txt  instruction_tuning.py  llama.py  lora.py  optimizer.py  optimizer_test.npy  optimizer_test.py  prepare_submit.py  pyproject.toml  rope.py  run_llama.py  sanity_check.data  sst-dev-advanced-output.txt  sst-dev-finetuning-output.txt  sst-dev-lora-output.txt  sst-dev-prompting-output.txt  sst-test-advanced-output.txt  sst-test-finetuning-output.txt  sst-test-lora-output.txt  sst-test-prompting-output.txt  structure.md
